# dsenum

./: .buildinfo  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  api.html  changelog.html  clean.sh  derivative_structure.py  derivative_structure_enumeration.py  developer_note.html  dsenum.cluster.html  dsenum.html  enumerate.py  environment.yml  examples.html  genindex.html  index.html  install.html  labeling.py  modules.html  mypy.ini  objects.inv  open_source_licenses.txt  permutation.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  (+8 more)
.doctrees/: api.doctree  changelog.doctree  developer_note.doctree  environment.pickle  examples.doctree  genindex.doctree  index.doctree  supercell.doctree
_modules/: dsenum.html  index.html
_sources/: changelog.rst.txt  dsenum.cluster.rst.txt  dsenum.rst.txt  index.md  index.rst.txt  modules.rst.txt  supercell.rst.txt
_static/: documentation_options.js
docs/: README.md  api.rst  changelog.rst  conf.py  developer_note.rst  examples.rst  frontier.md  glossary.md  index.rst
dsenum/: README.md  __init__.py  _version.py  coloring.py  coloring_generator.py  converter.py  core.c  core.pyx  derivative_structure.py  enumerate.py  labeling.py  permutation.py  permutation_group.py  polya.py  smith_normal_form.py  superlattice.py  test_derivative_structure_enumeration.py  test_superlattice_fcc_bcc.py  utils.py
examples/: Sn_oxide.py  basic.html  basic.ipynb  constraints.html  constraints.ipynb  fcc.py  fcc_sro.py  group.py  oxygen_deficient_perovskite.py  performance.html  plot_fcc_enumeration.py
pyzdd/: __init__.py  _version.py  graph.py  structure.py
source/: conf.py
src/: example.cpp  graph.hpp  iterator.cpp  iterator.hpp  permutation.hpp  short_range_order.hpp  structure_enumeration.hpp  type.hpp  utils.hpp  wrapper.cpp
tests/: benchmark.py  test_benchmark.py  test_coloring_generator.py  test_converter.py  test_graph.py  (+12 more)
(+83 files in other folders)
