[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel", "Cython>=0.29.1", "numpy"]
build-backend = "setuptools.build_meta"

# Enable version inference
[tool.setuptools_scm]

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.pytest.ini_options]
addopts = "--benchmark-skip"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:yaml:",
    "ignore::PendingDeprecationWarning:yaml:",
    "ignore::DeprecationWarning:pymatgen:",
    "ignore::PendingDeprecationWarning:pymatgen:",
    "ignore::PendingDeprecationWarning:ruamel:",
    "ignore::PendingDeprecationWarning:monty:",
    "ignore::DeprecationWarning:past:",
]
