[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel", "Cython>=0.29.1", "numpy"]
build-backend = "setuptools.build_meta"

# Enable version inference
[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--benchmark-skip"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:yaml:",
    "ignore::PendingDeprecationWarning:yaml:",
    "ignore::DeprecationWarning:pymatgen:",
    "ignore::PendingDeprecationWarning:pymatgen:",
    "ignore::PendingDeprecationWarning:ruamel:",
    "ignore::PendingDeprecationWarning:monty:",
    "ignore::DeprecationWarning:past:",
]

[tool.ruff]
line-length = 99
[tool.ruff.lint]
extend-select = [
    "F",           # pyflakes
    "E",           # pycodestyle-errors
    "I",           # isort
    # "D",           # pydocstyle
    "UP",          # pyupgrade
]
extend-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D203",  # Conflict with D211
    "D205",
    "D213",  # Conflict with D212
    "E501",
]

[tool.mypy]
exclude = [
  'docs',
]
warn_no_return = false
